# audbcards

./: .buildinfo  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  audb-public.html  changelog.html  contributing.html  data-public.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sphinx-extension.html
.doctrees/: audb-public.doctree  changelog.doctree  contributing.doctree  data-public.doctree  environment.pickle  index.doctree  install.doctree  sphinx-extension.doctree
_modules/: index.html
_sources/: audb-public.rst.txt  data-public.rst.txt
api/: audbcards.Datacard.html  audbcards.Dataset.html  audbcards.config.html  audbcards.html
audb-public/: air.html  clac.html  cmu-mosei.html  cmu-mosi.html  cochlscene.html  cough-speech-sneeze.html  crema-d.html  css10.html  cstr-vctk.html  eesc.html  emodb.html  emouerj.html  emozionalmente.html  esc-50.html  expresso.html  fsdnoisy18k.html  ir-c4dm.html  kannada.html  ljspeech.html  mesd.html  micirp.html  musan.html  nemo.html  openair.html  quechua.html  ravdess-videos.html  ravdess.html  speech-accent-archive.html  subesco.html  urbansound8k.html  vadtoolkit.html  wham.html
audbcards/: __init__.py
data-public/: air.html  cough-speech-sneeze.html  crema-d.html  emodb.html  micirp.html  musan.html  vadtoolkit.html
docs/: conf.py  index.rst  requirements.txt  sphinx-extension.rst
tests/: conf.py  conftest.py  requirements.txt  test_datacard.py  test_dataset.py  test_fixture.py  test_fixtures.py  test_utils.py
(+116 files in other folders)
