[metadata]
name = audbcards
author = Hagen Wierstorf, Christian Geng, BahaEddine Abrougui
author_email = hwierstorf@audeering.com
url = https://audeering.github.io/audbcards/
project_urls =
    Documentation = https://audeering.github.io/audbcards/
description = Create data cards for audb databases
long_description = file: README.rst, CHANGELOG.rst
license = MIT
license_file = LICENSE
keywords = audio, data, annotation, mlops, machine learning, documentation
platforms= any
classifiers =
    Development Status :: 4 - Beta 
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audb >=1.5.1
    audplot >=1.4.6
python_requires = >=3.8
setup_requires =
    setuptools_scm

[tool:pytest]
xfail_strict = true

[flake8]
exclude =
    .eggs,
    build,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused imports
    __init__.py: F401,
